update user routes
